--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>Discover the best food delivery in Jaipur</h2>
         <p>Mom what's for dinner tonight? "It's Tinda my dear!"... &#x1F616&#x1F616&#x1F616</p>
         <p>For all of your Tinda moments</p>
-        <button class="btn">Order Now</button>
+        <button class="btn" ><a href="#contact">Order Now</a></button>
     </section>
     <section id="container">
         <h1 class="primary center">Our Services</h1>
