--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Food Delivery Service in Jaipur | SammyFoods.com </title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media = "screen and (max-width: 900px)" href="phone.css">
+    <link rel="stylesheet" media="screen and (max-width: 900px)" href="phone.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&family=Bree+Serif&family=Ubuntu:wght@300&display=swap"
@@ -24,7 +24,7 @@
             <li class="item"><a href="#container">Services</a></li>
             <li class="item"><a href="#client-section">Clients</a></li>
             <li class="item"><a href="#contact">Order Now</a></li>
-            <li class="item"><a href="#">Contact Us</a></li>
+            <li class="item"><a href="#info">Contact Us</a></li>
 
         </ul>
     </nav>
@@ -33,7 +33,7 @@
         <h2>Discover the best food delivery in Jaipur</h2>
         <p>Mom what's for dinner tonight? "It's Tinda my dear!"... &#x1F616&#x1F616&#x1F616</p>
         <p>For all of your Tinda moments</p>
-        <button class="btn" ><a href="#contact">Order Now</a></button>
+        <button class="btn"><a href="#contact">Order Now</a></button>
     </section>
     <section id="container">
         <h1 class="primary center">Our Services</h1>
@@ -118,6 +118,24 @@
                     </div>
                 </div>
             </form>
+        </div>
+    </section>
+    <section id="info">
+        <div >
+            <p class="about-me">
+                Contact No: +91 70734-12759
+            </p>
+            <p class="about-me">
+                Email: hackersam2451@gmail.com
+            </p>
+        </div>
+        <div id="social">
+            <ul>
+                <li><a href="https://www.facebook.com/profile.php?id=100008766993141"><img src="https://img.icons8.com/metro/45/000000/facebook-new--v2.png" alt="Facebook"></a></li>
+                <li><a href="https://www.instagram.com/enorm_vigor/"><img src="https://img.icons8.com/metro/45/000000/instagram-new.png" alt="Instagram"></a></li>
+                <li><a href="https://twitter.com/saranshgautam24"><img src="https://img.icons8.com/metro/45/000000/twitter.png" alt="Twitter"></a></li>
+                <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDbFhNXXBfrpzkRNghRppvslmPLmLcvXPfCzvwxGJGWrxfLgcdbtPXtZwngqNMrWMLMhMJD"><img src="https://img.icons8.com/metro/45/000000/google-plus.png" alt="Gmail"></a></li>
+            </ul>
         </div>
     </section>
     <footer>
